maximum added to health and xp and visible to player

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -71,12 +71,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-07T13:28:33.263325Z",
      "start_time": "2025-05-07T13:28:31.467768Z"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## Welcome to the Fantasy Adventure Game"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cbe83d3d10854047a1083311bb97ea7a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ed0ebf2d2aca48599517df038f973a50",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "🎉 **Level Up!** Ihno reached level 2!"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "🎉 **Level Up!** Ihno reached level 3!"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# --- IMPORTS ---\n",
     "import os\n",
@@ -122,15 +189,22 @@
     "def check_level_up():\n",
     "    level = player_stats.get(\"level\", 1)\n",
     "    xp = player_stats.get(\"xp\", 0)\n",
+    "    max_xp = player_stats.get(\"max_xp\", 20)\n",
     "    leveled_up = False\n",
-    "    while xp >= xp_required(level):\n",
-    "        xp -= xp_required(level)\n",
+    "\n",
+    "    while xp >= max_xp:\n",
+    "        xp -= max_xp\n",
     "        level += 1\n",
-    "        player_stats[\"health\"] += 10\n",
+    "        player_stats[\"max_health\"] += 10\n",
+    "        player_stats[\"health\"] = player_stats[\"max_health\"]\n",
     "        player_stats[\"strength\"] += 2\n",
+    "        max_xp = xp_required(level)\n",
     "        leveled_up = True\n",
+    "\n",
     "    player_stats[\"xp\"] = xp\n",
     "    player_stats[\"level\"] = level\n",
+    "    player_stats[\"max_xp\"] = max_xp\n",
+    "\n",
     "    if leveled_up:\n",
     "        display(Markdown(f\"🎉 **Level Up!** {player_name} reached level {level}!\"))\n",
     "\n",
@@ -172,7 +246,10 @@
     "    try:\n",
     "        updates = json.loads(meta_match.group(1))\n",
     "        if \"health\" in updates:\n",
-    "            player_stats[\"health\"] = max(0, player_stats.get(\"health\", 100) + updates[\"health\"])\n",
+    "            player_stats[\"health\"] = min(\n",
+    "                player_stats.get(\"max_health\", 100),\n",
+    "                max(0, player_stats.get(\"health\", 100) + updates[\"health\"])\n",
+    "            )\n",
     "        if \"gold\" in updates:\n",
     "            player_stats[\"gold\"] = max(0, player_stats.get(\"gold\", 0) + updates[\"gold\"])\n",
     "        if \"xp\" in updates:\n",
@@ -193,10 +270,17 @@
     "\n",
     "# --- GAME DISPLAY ---\n",
     "def print_game_state():\n",
+    "    health = f\"{player_stats.get('health', 0)}/{player_stats.get('max_health', 0)}\"\n",
+    "    xp = f\"{player_stats.get('xp', 0)}/{player_stats.get('max_xp', 0)}\"\n",
+    "    level = player_stats.get('level', 1)\n",
+    "    strength = player_stats.get('strength', 0)\n",
+    "    gold = player_stats.get('gold', 0)\n",
+    "\n",
     "    display(Markdown(f\"### 📖 **Story so far**\\n{context}\"))\n",
     "    display(Markdown(\n",
     "        f\"**🧍 {player_name}'s Inventory:** {inventory}  \\n\"\n",
-    "        f\"**❤️ Stats:** {player_stats}  \\n\"\n",
+    "        f\"**❤️ Health:** {health}  |  **⚔️ Strength:** {strength}  \\n\"\n",
+    "        f\"**⭐ Level:** {level}  |  **🔹 XP:** {xp}  |  **💰 Gold:** {gold}  \\n\"\n",
     "        f\"🎯 Difficulty: {['Easy', 'Medium', 'Hard', 'Very Hard', 'Nightmare'][difficulty - 1]}\"\n",
     "    ))\n",
     "\n",
@@ -263,13 +347,13 @@
     "    global context, player_stats, inventory, difficulty, game_memory\n",
     "    difficulty = {\"Easy\": 1, \"Medium\": 2, \"Hard\": 3}[difficulty_choice]\n",
     "    if difficulty_choice == \"Easy\":\n",
-    "        player_stats = {\"health\": 200, \"strength\": 15, \"gold\": 5, \"xp\": 0, \"level\": 1}\n",
+    "        player_stats = {\"health\": 200, \"max_health\": 200, \"strength\": 15, \"gold\": 5, \"xp\": 0, \"level\": 1, \"max_xp\": 20}\n",
     "        inventory = [\"torch\", \"wooden sword\"]\n",
     "    elif difficulty_choice == \"Medium\":\n",
-    "        player_stats = {\"health\": 100, \"strength\": 10, \"gold\": 5, \"xp\": 0, \"level\": 1}\n",
+    "        player_stats = {\"health\": 100, \"max_health\": 100, \"strength\": 10, \"gold\": 5, \"xp\": 0, \"level\": 1, \"max_xp\": 20}\n",
     "        inventory = [\"torch\", \"wooden stick\"]\n",
     "    elif difficulty_choice == \"Hard\":\n",
-    "        player_stats = {\"health\": 50, \"strength\": 5, \"gold\": 5, \"xp\": 0, \"level\": 1}\n",
+    "        player_stats = {\"health\": 50, \"max_health\": 50, \"strength\": 5, \"gold\": 5, \"xp\": 0, \"level\": 1, \"max_xp\": 20}\n",
     "        inventory = [\"torch\"]\n",
     "    context = f\"{player_name} awakens in a dark forest. A mysterious figure approaches.\"\n",
     "    game_memory = [context]\n",
@@ -312,48 +396,7 @@
     "    display(widgets.HBox([difficulty_dropdown, start_button, load_button, delete_button]))\n",
     "    display(output_area)\n",
     "    game_ui_initialized = True\n"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ],
-      "text/markdown": "## Welcome to the Fantasy Adventure Game"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "26e2300ad27a4f6abc777ac0064ed76c"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Output()"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "3ab64e0a0103498fab88faf8cddfa7e4"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "execution_count": 1
+   ]
   }
  ],
  "metadata": {
