--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -9,16 +9,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-07T14:02:44.608144Z",
      "start_time": "2025-05-07T14:02:35.700427Z"
     }
    },
-   "source": [
-    "# module installation script\n",
-    "%pip install google-generativeai"
-   ],
    "outputs": [
     {
      "name": "stdout",
@@ -67,16 +64,62 @@
      ]
     }
    ],
-   "execution_count": 5
+   "source": [
+    "# module installation script\n",
+    "%pip install google-generativeai"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-07T14:12:01.517825Z",
      "start_time": "2025-05-07T14:12:00.552643Z"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## Welcome to the Fantasy Adventure Game"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bcd3cdebeffa455d983b82ad99328f85",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ec03e865cd8d4195a73eb8a420f49014",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# --- IMPORTS ---\n",
     "import os\n",
@@ -366,48 +409,7 @@
     "    display(widgets.HBox([difficulty_dropdown, start_button, load_button, delete_button]))\n",
     "    display(output_area)\n",
     "    game_ui_initialized = True\n"
-   ],
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ],
-      "text/markdown": "## Welcome to the Fantasy Adventure Game"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "HBox(children=(Dropdown(description='Difficulty:', index=1, layout=Layout(width='50%'), options=('Easy', 'Medi…"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "1ccd048cef1f46de862411a376ce5a32"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Output()"
-      ],
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "08af65e1b3774626a4ed932f0dfa78f9"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "execution_count": 1
+   ]
   }
  ],
  "metadata": {
