amulet and necklace chanegd to accessory 1 and 2

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-07T14:12:01.517825Z",
@@ -94,7 +94,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcd3cdebeffa455d983b82ad99328f85",
+       "model_id": "114635ac0c6240738726f530faaaabf5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec03e865cd8d4195a73eb8a420f49014",
+       "model_id": "af5f1d3088f148f482d0ec5f217b734d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -155,8 +155,8 @@
     "    \"chestplate\": None,\n",
     "    \"leggings\": None,\n",
     "    \"boots\": None,\n",
-    "    \"amulet\": None,\n",
-    "    \"necklace\": None\n",
+    "    \"accessory_1\": None,\n",
+    "    \"accessory_2\": None\n",
     "}\n",
     "\n",
     "# --- DIFFICULTY ADJUSTMENT ---\n",
@@ -281,8 +281,8 @@
     "        f\"- 🛡️ Chestplate: {equipment['chestplate'] or 'None'}\",\n",
     "        f\"- 👖 Leggings: {equipment['leggings'] or 'None'}\",\n",
     "        f\"- 🥾 Boots: {equipment['boots'] or 'None'}\",\n",
-    "        f\"- 📿 Amulet: {equipment['amulet'] or 'None'}\",\n",
-    "        f\"- 📌 Necklace: {equipment['necklace'] or 'None'}\"\n",
+    "        f\"- 📿 Accessory 1: {equipment['accessory_1'] or 'None'}\",\n",
+    "        f\"- 📌 Accessory 2: {equipment['accessory_2'] or 'None'}\"\n",
     "    ])\n",
     "\n",
     "    display(Markdown(f\"### 📖 **Story so far**\\n{context}\"))\n",
