added more stats like endurance and magic, added stamina an mana bar. changed leveling up to allocate a stat point

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-07T14:12:01.517825Z",
@@ -94,7 +94,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "114635ac0c6240738726f530faaaabf5",
+       "model_id": "0deb627888614c02b8ced21823bd9072",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,12 +108,24 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af5f1d3088f148f482d0ec5f217b734d",
+       "model_id": "9420323c346b4d30b9fa8372e5574399",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "🎉 **Level Up!** Ihno reached level 2!"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
       ]
      },
      "metadata": {},
@@ -139,7 +151,7 @@
     "\n",
     "genai.configure(api_key=api_key)\n",
     "\n",
-    "# --- GAME STATE ---\n",
+    "# --- GLOBALS ---\n",
     "model_name = \"gemini-2.0-flash\"\n",
     "player_name = \"Ihno\"\n",
     "context = \"\"\n",
@@ -148,6 +160,8 @@
     "inventory = []\n",
     "difficulty = 1\n",
     "save_file = \"savegame.json\"\n",
+    "awaiting_stat_allocation = False\n",
+    "\n",
     "equipment = {\n",
     "    \"left_hand\": None,\n",
     "    \"right_hand\": None,\n",
@@ -177,25 +191,74 @@
     "    xp = player_stats.get(\"xp\", 0)\n",
     "    max_xp = player_stats.get(\"max_xp\", 20)\n",
     "    leveled_up = False\n",
+    "    new_points = 0\n",
     "\n",
     "    while xp >= max_xp:\n",
     "        xp -= max_xp\n",
     "        level += 1\n",
     "        player_stats[\"max_health\"] += 10\n",
     "        player_stats[\"health\"] = player_stats[\"max_health\"]\n",
-    "        player_stats[\"strength\"] += 2\n",
+    "        new_points += 1\n",
     "        max_xp = xp_required(level)\n",
     "        leveled_up = True\n",
     "\n",
     "    player_stats[\"xp\"] = xp\n",
     "    player_stats[\"level\"] = level\n",
     "    player_stats[\"max_xp\"] = max_xp\n",
+    "    player_stats[\"unassigned_stat_points\"] = player_stats.get(\"unassigned_stat_points\", 0) + new_points\n",
     "\n",
     "    if leveled_up:\n",
     "        display(Markdown(f\"🎉 **Level Up!** {player_name} reached level {level}!\"))\n",
+    "        prompt_stat_allocation()\n",
+    "\n",
+    "# --- STAT ALLOCATION ---\n",
+    "def prompt_stat_allocation():\n",
+    "    global awaiting_stat_allocation\n",
+    "    unassigned = player_stats.get(\"unassigned_stat_points\", 0)\n",
+    "    if unassigned <= 0:\n",
+    "        awaiting_stat_allocation = False\n",
+    "        return\n",
+    "\n",
+    "    awaiting_stat_allocation = True\n",
+    "    options = [\"Strength\", \"Defense\", \"Intelligence\", \"Endurance\", \"Magic\"]\n",
+    "    stat_dropdown = widgets.Dropdown(options=options, description=\"Add to:\")\n",
+    "    confirm_button = widgets.Button(description=\"Apply Point\", button_style='success')\n",
+    "\n",
+    "    def assign_stat(b):\n",
+    "        global awaiting_stat_allocation\n",
+    "        stat = stat_dropdown.value.lower()\n",
+    "        player_stats[stat] = player_stats.get(stat, 0) + 1\n",
+    "\n",
+    "        # Bonus effects\n",
+    "        if stat == \"endurance\":\n",
+    "            player_stats[\"max_stamina\"] += 5\n",
+    "            player_stats[\"stamina\"] = player_stats[\"max_stamina\"]\n",
+    "        elif stat == \"magic\":\n",
+    "            player_stats[\"max_mana\"] += 5\n",
+    "            player_stats[\"mana\"] = player_stats[\"max_mana\"]\n",
+    "\n",
+    "        player_stats[\"unassigned_stat_points\"] -= 1\n",
+    "        with output_area:\n",
+    "            clear_output()\n",
+    "            print_game_state()\n",
+    "\n",
+    "        if player_stats[\"unassigned_stat_points\"] > 0:\n",
+    "            prompt_stat_allocation()\n",
+    "        else:\n",
+    "            awaiting_stat_allocation = False\n",
+    "            with output_area:\n",
+    "                print_game_state()\n",
+    "                display(input_box, submit_button)\n",
+    "\n",
+    "    confirm_button.on_click(assign_stat)\n",
+    "\n",
+    "    with output_area:\n",
+    "        clear_output()\n",
+    "        display(Markdown(f\"🧠 You have **{unassigned}** unassigned stat point(s)! Choose a stat to upgrade:\"))\n",
+    "        display(stat_dropdown, confirm_button)\n",
     "\n",
     "# --- STORY GENERATION ---\n",
-    "def generate_story(context, player_input, difficulty, player_stats, inventory,equipment):\n",
+    "def generate_story(context, player_input, difficulty, player_stats, inventory, equipment):\n",
     "    prompt = (\n",
     "        \"You are a fantasy dungeon-master AI. \"\n",
     "        \"Continue the adventure in a vivid, immersive style. \"\n",
@@ -203,7 +266,8 @@
     "        \"Make it interactive, try and end the output with a question so that the player can react to it. \"\n",
     "        \"After the story, provide any game state updates (health, gold, inventory, xp) in this JSON format:\\n\"\n",
     "        \"`<META>{\\\"health\\\": -10, \\\"gold\\\": +5, \\\"xp\\\": 10, \\\"inventory_add\\\": [\\\"amulet\\\"], \\\"inventory_remove\\\": [\\\"torch\\\"], \\\"equip\\\": {\\\"right_hand\\\": \\\"iron sword\\\"}, \\\"unequip\\\": [\\\"helmet\\\"]}</META>`\\n\"\n",
-    "        \"If no update is needed, just write `<META>{}</META>`.\\n\\n\"\n",
+    "        \"If no update is needed, just write `<META>{}</META>`.\\n\"\n",
+    "        \"All JSON keys and string values must be in double quotes to ensure valid JSON.\\n\\n\"\n",
     "        f\"Difficulty: {difficulty}\\n\"\n",
     "        f\"Stats: {player_stats}\\n\"\n",
     "        f\"Inventory: {inventory}\\n\\n\"\n",
@@ -269,9 +333,15 @@
     "# --- GAME DISPLAY ---\n",
     "def print_game_state():\n",
     "    health = f\"{player_stats.get('health', 0)}/{player_stats.get('max_health', 0)}\"\n",
+    "    stamina = f\"{player_stats.get('stamina', 0)}/{player_stats.get('max_stamina', 0)}\"\n",
+    "    mana = f\"{player_stats.get('mana', 0)}/{player_stats.get('max_mana', 0)}\"\n",
+    "    strength = player_stats.get('strength', 0)\n",
+    "    defense = player_stats.get('defense', 0)\n",
+    "    intelligence = player_stats.get('intelligence', 0)\n",
+    "    endurance = player_stats.get('endurance', 0)\n",
+    "    magic = player_stats.get('magic', 0)\n",
     "    xp = f\"{player_stats.get('xp', 0)}/{player_stats.get('max_xp', 0)}\"\n",
     "    level = player_stats.get('level', 1)\n",
-    "    strength = player_stats.get('strength', 0)\n",
     "    gold = player_stats.get('gold', 0)\n",
     "\n",
     "    equipped_items = \"\\n\".join([\n",
@@ -288,22 +358,30 @@
     "    display(Markdown(f\"### 📖 **Story so far**\\n{context}\"))\n",
     "    display(Markdown(\n",
     "        f\"**🧍 {player_name}'s Inventory:** {inventory}  \\n\"\n",
-    "        f\"**❤️ Health:** {health}  |  **⚔️ Strength:** {strength}  \\n\"\n",
+    "        f\"**❤️ Health:** {health}  |  **🏃‍♂️ Stamina:** {stamina}  |  **🔮 Mana:** {mana}  \\n\"\n",
+    "        f\"**💪 Strength:** {strength}  |  **🛡 Defense:** {defense}  |  **🧠 Intelligence:** {intelligence}  |  **🦾 Endurance:** {endurance}  |  **✨ Magic:** {magic}  \\n\"\n",
     "        f\"**⭐ Level:** {level}  |  **🔹 XP:** {xp}  |  **💰 Gold:** {gold}  \\n\"\n",
     "        f\"🎯 Difficulty: {['Easy', 'Medium', 'Hard', 'Very Hard', 'Nightmare'][difficulty - 1]}\\n\\n\"\n",
     "        f\"### 🧰 **Equipped Gear:**\\n{equipped_items}\"\n",
     "    ))\n",
     "\n",
-    "\n",
     "# --- GAME TURN ---\n",
     "def play_turn(player_input):\n",
     "    global context\n",
+    "    if awaiting_stat_allocation:\n",
+    "        with output_area:\n",
+    "            clear_output()\n",
+    "            display(Markdown(\"⚠️ You must assign your unspent stat point(s) before continuing.\"))\n",
+    "        prompt_stat_allocation()\n",
+    "        return\n",
+    "\n",
     "    if not player_input.strip():\n",
     "        return\n",
+    "\n",
     "    game_memory.append(f\"{player_name}: {player_input}\")\n",
     "    adjust_difficulty(player_input)\n",
     "    recent_context = \"\\n\".join(game_memory[-6:])\n",
-    "    raw_output = generate_story(recent_context, player_input, difficulty, player_stats, inventory,equipment)\n",
+    "    raw_output = generate_story(recent_context, player_input, difficulty, player_stats, inventory, equipment)\n",
     "    cleaned_output = apply_meta_updates(raw_output)\n",
     "    context_update = f\"\\n\\n{cleaned_output}\"\n",
     "    context += context_update\n",
@@ -312,7 +390,8 @@
     "    output_area.clear_output(wait=True)\n",
     "    with output_area:\n",
     "        print_game_state()\n",
-    "        display(input_box, submit_button)\n",
+    "        if not awaiting_stat_allocation:\n",
+    "            display(input_box, submit_button)\n",
     "\n",
     "# --- SAVE / LOAD / DELETE ---\n",
     "def save_game():\n",
@@ -359,15 +438,28 @@
     "def start_new_game(difficulty_choice):\n",
     "    global context, player_stats, inventory, difficulty, game_memory\n",
     "    difficulty = {\"Easy\": 1, \"Medium\": 2, \"Hard\": 3}[difficulty_choice]\n",
+    "    base_stats = {\n",
+    "        \"strength\": 10, \"defense\": 0, \"intelligence\": 1, \"endurance\": 1, \"magic\": 1,\n",
+    "        \"xp\": 0, \"level\": 1, \"max_xp\": 20, \"gold\": 5,\n",
+    "        \"max_health\": 100, \"max_stamina\": 80, \"max_mana\": 30,\n",
+    "        \"unassigned_stat_points\": 0\n",
+    "    }\n",
+    "\n",
     "    if difficulty_choice == \"Easy\":\n",
-    "        player_stats = {\"health\": 200, \"max_health\": 200, \"strength\": 15, \"gold\": 5, \"xp\": 0, \"level\": 1, \"max_xp\": 20}\n",
+    "        base_stats.update({\"health\": 200, \"max_health\": 200, \"strength\": 15})\n",
     "        inventory = [\"torch\", \"wooden sword\"]\n",
     "    elif difficulty_choice == \"Medium\":\n",
-    "        player_stats = {\"health\": 100, \"max_health\": 100, \"strength\": 10, \"gold\": 5, \"xp\": 0, \"level\": 1, \"max_xp\": 20}\n",
+    "        base_stats.update({\"health\": 100})\n",
     "        inventory = [\"torch\", \"wooden stick\"]\n",
     "    elif difficulty_choice == \"Hard\":\n",
-    "        player_stats = {\"health\": 50, \"max_health\": 50, \"strength\": 5, \"gold\": 5, \"xp\": 0, \"level\": 1, \"max_xp\": 20}\n",
+    "        base_stats.update({\"health\": 50})\n",
     "        inventory = [\"torch\"]\n",
+    "\n",
+    "    base_stats[\"health\"] = base_stats.get(\"health\", base_stats[\"max_health\"])\n",
+    "    base_stats[\"stamina\"] = base_stats[\"max_stamina\"]\n",
+    "    base_stats[\"mana\"] = base_stats[\"max_mana\"]\n",
+    "    player_stats = base_stats\n",
+    "\n",
     "    context = f\"{player_name} awakens in a dark forest. A mysterious figure approaches.\"\n",
     "    game_memory = [context]\n",
     "    save_game()\n",
@@ -408,7 +500,9 @@
     "    display(Markdown(\"## Welcome to the Fantasy Adventure Game\"))\n",
     "    display(widgets.HBox([difficulty_dropdown, start_button, load_button, delete_button]))\n",
     "    display(output_area)\n",
-    "    game_ui_initialized = True\n"
+    "    game_ui_initialized = True\n",
+    "\n",
+    "\n"
    ]
   }
  ],
