paar probeersels, testen om unassigned stat points te fixen

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-07T14:12:01.517825Z",
@@ -94,7 +94,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0deb627888614c02b8ced21823bd9072",
+       "model_id": "60788996ff9e402a9ae1a778f6990385",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,24 +108,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9420323c346b4d30b9fa8372e5574399",
+       "model_id": "64f544273aa0464f80a23af669b8dcdf",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "🎉 **Level Up!** Ihno reached level 2!"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
       ]
      },
      "metadata": {},
@@ -208,8 +196,12 @@
     "    player_stats[\"unassigned_stat_points\"] = player_stats.get(\"unassigned_stat_points\", 0) + new_points\n",
     "\n",
     "    if leveled_up:\n",
-    "        display(Markdown(f\"🎉 **Level Up!** {player_name} reached level {level}!\"))\n",
-    "        prompt_stat_allocation()\n",
+    "        with output_area:\n",
+    "            clear_output()\n",
+    "            print_game_state()\n",
+    "            display(Markdown(f\"🎉 **Level Up!** {player_name} reached level {level}!\"))\n",
+    "            display(input_box, submit_button)\n",
+    "        # prompt_stat_allocation()\n",
     "\n",
     "# --- STAT ALLOCATION ---\n",
     "def prompt_stat_allocation():\n",
@@ -238,22 +230,21 @@
     "            player_stats[\"mana\"] = player_stats[\"max_mana\"]\n",
     "\n",
     "        player_stats[\"unassigned_stat_points\"] -= 1\n",
+    "\n",
     "        with output_area:\n",
     "            clear_output()\n",
     "            print_game_state()\n",
-    "\n",
-    "        if player_stats[\"unassigned_stat_points\"] > 0:\n",
-    "            prompt_stat_allocation()\n",
-    "        else:\n",
-    "            awaiting_stat_allocation = False\n",
-    "            with output_area:\n",
-    "                print_game_state()\n",
-    "                display(input_box, submit_button)\n",
-    "\n",
-    "    confirm_button.on_click(assign_stat)\n",
+    "            display(input_box, submit_button)\n",
+    "            if player_stats[\"unassigned_stat_points\"] > 0:\n",
+    "                display(Markdown(f\"🧠 You have **{player_stats['unassigned_stat_points']}** stat point(s) left!\"))\n",
+    "                display(stat_dropdown, confirm_button)\n",
+    "            else:\n",
+    "                awaiting_stat_allocation = False\n",
     "\n",
     "    with output_area:\n",
     "        clear_output()\n",
+    "        print_game_state()\n",
+    "        display(input_box, submit_button)\n",
     "        display(Markdown(f\"🧠 You have **{unassigned}** unassigned stat point(s)! Choose a stat to upgrade:\"))\n",
     "        display(stat_dropdown, confirm_button)\n",
     "\n",
@@ -344,15 +335,15 @@
     "    level = player_stats.get('level', 1)\n",
     "    gold = player_stats.get('gold', 0)\n",
     "\n",
-    "    equipped_items = \"\\n\".join([\n",
-    "        f\"- 🫱 Right Hand: {equipment['right_hand'] or 'None'}\",\n",
-    "        f\"- 🫲 Left Hand: {equipment['left_hand'] or 'None'}\",\n",
-    "        f\"- 🪖 Helmet: {equipment['helmet'] or 'None'}\",\n",
-    "        f\"- 🛡️ Chestplate: {equipment['chestplate'] or 'None'}\",\n",
-    "        f\"- 👖 Leggings: {equipment['leggings'] or 'None'}\",\n",
-    "        f\"- 🥾 Boots: {equipment['boots'] or 'None'}\",\n",
-    "        f\"- 📿 Accessory 1: {equipment['accessory_1'] or 'None'}\",\n",
-    "        f\"- 📌 Accessory 2: {equipment['accessory_2'] or 'None'}\"\n",
+    "    equipped_items = \"\\n\".join([ \n",
+    "        f\"- 🫱 Right Hand: {equipment['right_hand'] or 'None'}\", \n",
+    "        f\"- 🫲 Left Hand: {equipment['left_hand'] or 'None'}\", \n",
+    "        f\"- 🪖 Helmet: {equipment['helmet'] or 'None'}\", \n",
+    "        f\"- 🛡️ Chestplate: {equipment['chestplate'] or 'None'}\", \n",
+    "        f\"- 👖 Leggings: {equipment['leggings'] or 'None'}\", \n",
+    "        f\"- 🥾 Boots: {equipment['boots'] or 'None'}\", \n",
+    "        f\"- 📿 Accessory 1: {equipment['accessory_1'] or 'None'}\", \n",
+    "        f\"- 📌 Accessory 2: {equipment['accessory_2'] or 'None'}\" \n",
     "    ])\n",
     "\n",
     "    display(Markdown(f\"### 📖 **Story so far**\\n{context}\"))\n",
@@ -371,8 +362,10 @@
     "    if awaiting_stat_allocation:\n",
     "        with output_area:\n",
     "            clear_output()\n",
+    "            print_game_state()\n",
     "            display(Markdown(\"⚠️ You must assign your unspent stat point(s) before continuing.\"))\n",
-    "        prompt_stat_allocation()\n",
+    "            display(input_box, submit_button)  # Ensuring the input box is displayed\n",
+    "        # prompt_stat_allocation()\n",
     "        return\n",
     "\n",
     "    if not player_input.strip():\n",
@@ -387,11 +380,26 @@
     "    context += context_update\n",
     "    game_memory.append(cleaned_output)\n",
     "    save_game()\n",
-    "    output_area.clear_output(wait=True)\n",
-    "    with output_area:\n",
-    "        print_game_state()\n",
-    "        if not awaiting_stat_allocation:\n",
-    "            display(input_box, submit_button)\n",
+    "\n",
+    "    # After generating the story, check if there are unassigned stat points\n",
+    "    unassigned = player_stats.get(\"unassigned_stat_points\", 0)\n",
+    "    if unassigned > 0:\n",
+    "        # Trigger stat allocation prompt after the turn\n",
+    "        with output_area:\n",
+    "            clear_output()\n",
+    "            print_game_state()\n",
+    "            display(Markdown(f\"🧠 You have **{unassigned}** unassigned stat point(s)! Choose a stat to upgrade:\"))\n",
+    "            # prompt_stat_allocation()  # Display the stat allocation UI\n",
+    "    else:\n",
+    "        # If no stat points are unassigned, proceed with the normal display\n",
+    "        output_area.clear_output(wait=True)\n",
+    "        with output_area:\n",
+    "            print_game_state()\n",
+    "            display(Markdown(\"What does Ihno do next?\"))  # Prompting for input\n",
+    "            display(input_box, submit_button)  # Ensure the input box is visible\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# --- SAVE / LOAD / DELETE ---\n",
     "def save_game():\n",
@@ -501,7 +509,6 @@
     "    display(widgets.HBox([difficulty_dropdown, start_button, load_button, delete_button]))\n",
     "    display(output_area)\n",
     "    game_ui_initialized = True\n",
-    "\n",
     "\n"
    ]
   }
