stat allocation promt fixed and working, small error you need to submit your action twice

--- a/Dungeon_AI_v1.ipynb
+++ b/Dungeon_AI_v1.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-07T14:12:01.517825Z",
@@ -94,7 +94,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60788996ff9e402a9ae1a778f6990385",
+       "model_id": "d0a9bbf88d6240399c08b1ff804270ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64f544273aa0464f80a23af669b8dcdf",
+       "model_id": "5897780ff9b5474b8efc32ccbd2f6511",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,6 +175,7 @@
     "    return 20 + (level - 1) * 15\n",
     "\n",
     "def check_level_up():\n",
+    "    global awaiting_stat_allocation\n",
     "    level = player_stats.get(\"level\", 1)\n",
     "    xp = player_stats.get(\"xp\", 0)\n",
     "    max_xp = player_stats.get(\"max_xp\", 20)\n",
@@ -196,12 +197,13 @@
     "    player_stats[\"unassigned_stat_points\"] = player_stats.get(\"unassigned_stat_points\", 0) + new_points\n",
     "\n",
     "    if leveled_up:\n",
+    "        awaiting_stat_allocation = True\n",
     "        with output_area:\n",
     "            clear_output()\n",
     "            print_game_state()\n",
     "            display(Markdown(f\"🎉 **Level Up!** {player_name} reached level {level}!\"))\n",
-    "            display(input_box, submit_button)\n",
     "        # prompt_stat_allocation()\n",
+    "\n",
     "\n",
     "# --- STAT ALLOCATION ---\n",
     "def prompt_stat_allocation():\n",
@@ -216,12 +218,13 @@
     "    stat_dropdown = widgets.Dropdown(options=options, description=\"Add to:\")\n",
     "    confirm_button = widgets.Button(description=\"Apply Point\", button_style='success')\n",
     "\n",
+    "    # Define the function to handle the button click event\n",
     "    def assign_stat(b):\n",
     "        global awaiting_stat_allocation\n",
     "        stat = stat_dropdown.value.lower()\n",
     "        player_stats[stat] = player_stats.get(stat, 0) + 1\n",
     "\n",
-    "        # Bonus effects\n",
+    "        # Bonus effects based on stat\n",
     "        if stat == \"endurance\":\n",
     "            player_stats[\"max_stamina\"] += 5\n",
     "            player_stats[\"stamina\"] = player_stats[\"max_stamina\"]\n",
@@ -231,22 +234,28 @@
     "\n",
     "        player_stats[\"unassigned_stat_points\"] -= 1\n",
     "\n",
+    "        # Re-render the updated game state and hide the stat allocation options\n",
     "        with output_area:\n",
-    "            clear_output()\n",
-    "            print_game_state()\n",
-    "            display(input_box, submit_button)\n",
+    "            clear_output()  # Clear the current display\n",
+    "            print_game_state()  # Re-render the game state with updated stats\n",
+    "            display(Markdown(f\"🧠 **Stat allocation complete!**\"))\n",
+    "            display(input_box, submit_button)  # Re-display the input and submit button\n",
     "            if player_stats[\"unassigned_stat_points\"] > 0:\n",
     "                display(Markdown(f\"🧠 You have **{player_stats['unassigned_stat_points']}** stat point(s) left!\"))\n",
-    "                display(stat_dropdown, confirm_button)\n",
+    "                display(stat_dropdown, confirm_button)  # Allow more allocation if points remain\n",
     "            else:\n",
-    "                awaiting_stat_allocation = False\n",
+    "                awaiting_stat_allocation = False  # Mark allocation as complete\n",
     "\n",
+    "    # Connect the button's click event to the `assign_stat` function\n",
+    "    confirm_button.on_click(assign_stat)\n",
+    "\n",
+    "    # Create a separate page for stat allocation\n",
     "    with output_area:\n",
-    "        clear_output()\n",
-    "        print_game_state()\n",
-    "        display(input_box, submit_button)\n",
+    "        clear_output()  # Clear previous page\n",
+    "        print_game_state()  # Optional: Display game context\n",
     "        display(Markdown(f\"🧠 You have **{unassigned}** unassigned stat point(s)! Choose a stat to upgrade:\"))\n",
-    "        display(stat_dropdown, confirm_button)\n",
+    "        display(stat_dropdown, confirm_button)  # Display stat allocation interface\n",
+    "\n",
     "\n",
     "# --- STORY GENERATION ---\n",
     "def generate_story(context, player_input, difficulty, player_stats, inventory, equipment):\n",
@@ -365,7 +374,7 @@
     "            print_game_state()\n",
     "            display(Markdown(\"⚠️ You must assign your unspent stat point(s) before continuing.\"))\n",
     "            display(input_box, submit_button)  # Ensuring the input box is displayed\n",
-    "        # prompt_stat_allocation()\n",
+    "            prompt_stat_allocation()\n",
     "        return\n",
     "\n",
     "    if not player_input.strip():\n",
@@ -381,22 +390,12 @@
     "    game_memory.append(cleaned_output)\n",
     "    save_game()\n",
     "\n",
-    "    # After generating the story, check if there are unassigned stat points\n",
-    "    unassigned = player_stats.get(\"unassigned_stat_points\", 0)\n",
-    "    if unassigned > 0:\n",
-    "        # Trigger stat allocation prompt after the turn\n",
-    "        with output_area:\n",
-    "            clear_output()\n",
-    "            print_game_state()\n",
-    "            display(Markdown(f\"🧠 You have **{unassigned}** unassigned stat point(s)! Choose a stat to upgrade:\"))\n",
-    "            # prompt_stat_allocation()  # Display the stat allocation UI\n",
-    "    else:\n",
-    "        # If no stat points are unassigned, proceed with the normal display\n",
-    "        output_area.clear_output(wait=True)\n",
-    "        with output_area:\n",
-    "            print_game_state()\n",
-    "            display(Markdown(\"What does Ihno do next?\"))  # Prompting for input\n",
-    "            display(input_box, submit_button)  # Ensure the input box is visible\n",
+    "    output_area.clear_output(wait=True)\n",
+    "    with output_area:\n",
+    "        print_game_state()\n",
+    "        display(Markdown(\"What does Ihno do next?\"))\n",
+    "        display(input_box, submit_button)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
